--- a/ring-period/package.json
+++ b/ring-period/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ringMinder",
+  "name": "ring-period",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "^24.0.0",
-    "react-native-scripts": "0.0.31",
-    "react-test-renderer": "^16.0.0-alpha.6"
+    "react-native-scripts": "1.8.1",
+    "jest-expo": "23.0.0",
+    "react-test-renderer": "16.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -19,8 +19,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^24.0.0",
-    "react": "^16.0.0",
-    "react-native": "^0.50.3"
+    "expo": "^23.0.4",
+    "react": "16.0.0",
+    "react-native": "0.50.3"
   }
 }
